--- a/functions/views/mainPage.ejs
+++ b/functions/views/mainPage.ejs
@@ -1,12 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Eth Lover</title>
+    <% include ./head %>
 </head>
+
 <body>
-    <h1>ahihi</h1>
+    <% include ./header %>
+    <div id="eth-banner">
+        <img src="../images/eth-banner.gif" alt="">
+    </div>
+    <div class="container body-content" id="main-page-content">
+        <div class="col-lg-7" style="text-align: center;">
+            <h1>Top 10 Token Activity</h1>
+            <ul class="nav nav-tabs" id="top-token-tab" role="tablist">
+                <li class="nav-item active">
+                    <a class="nav-link active" id="capitalization-tab" data-toggle="tab" href="#capitalization"
+                        role="tab" aria-controls="capitalization" aria-selected="true">By Capitalization</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="trade-tab" data-toggle="tab" href="#trade" role="tab" aria-controls="trade"
+                        aria-selected="false">By Trade Volume</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="operation-tab" data-toggle="tab" href="#operation" role="tab"
+                        aria-controls="operation" aria-selected="false">By Operations</a>
+                </li>
+            </ul>
+            <div class="tab-content" id="top-token-content">
+                <div class="tab-pane fade show active in" id="capitalization" role="tabpanel"
+                    aria-labelledby="capitalization-tab">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Token</th>
+                                <th scope="col">Cap</th>
+                                <th scope="col">Price</th>
+                                <th scope="col">24h</th>
+                                <th scope="col">7d</th>
+                                <th scope="col">30d</th>
+                            </tr>
+                        </thead>
+                        <tbody id="cap-tab-content">
+
+                        </tbody>
+                    </table>
+                </div>
+                <div class="tab-pane fade" id="trade" role="tabpanel" aria-labelledby="trade-tab">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Token</th>
+                                <th scope="col">Price</th>
+                                <th scope="col">Volume</th>
+                                <th scope="col">24h</th>
+                                <th scope="col">7d</th>
+                                <th scope="col">30d</th>
+                            </tr>
+                        </thead>
+                        <tbody id="cap-trade-content">
+
+                        </tbody>
+                    </table>
+                </div>
+                <div class="tab-pane fade" id="operation" role="tabpanel" aria-labelledby="operation-tab">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Token</th>
+                                <th scope="col">Operations(24h)</th>
+                                <th scope="col">24h</th>
+                                <th scope="col">7d</th>
+                                <th scope="col">30d</th>
+                            </tr>
+                        </thead>
+                        <tbody id="cap-operation-content">
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <a href="#" class="see-more">See more</a>
+        </div>
+        <div class="col-lg-5">
+            <div id="metamask">
+                <img src="../images/metamask.png" alt="">
+                <a href="#" class="see-more" id="meta-mask-btn">Connect Metamask</a>
+                <div id="meta-mask-balance">
+                    <p>Your Meta Mask Balance</p>
+                    <div id="balance"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <% include footer %>
+    <% include takeNote %>
+    <% include script %>
+    
+    <script src="javascriptClient/checkLogin.js"></script>
+    <script src="javascriptClient/tableToken.js"></script>
+    <script src="javascriptClient/takenote.js"></script>
+    <script src="javascriptClient/metamask.js"></script>
 </body>
+
 </html>
